Desenvolvido metodo par editar usuário
